style: add border-bottom for navbar and sidebar

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,8 +1,12 @@
+// color
+$divider: #DBDBDB;
+
 // navbar
 $navbar-background-height: 40px;
 $sidebar-width: 220px;
 
 :export {
+  divider: $divider;
   navbar-background-height: $navbar-background-height;
   sidebar-width: $sidebar-width
 }
